[package]
name = "neko-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neko-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
neko-common = { path = "../neko-common" }
network-types = "0.0.7"

[profile.dev]
opt-level = 2
overflow-checks = false
debug-assertions = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
