[package]
name = "neko-firewall"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neko-firewall"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
aya = "0.13"
aya-log = "0.2"
bytes = "1"
clap = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
ipnetwork = "0.21"
maxminddb = "0.27"
neko-common = { path = "../neko-common", features = ["user"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { workspace = true }
